--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "npm run build:pre && npm run build:core",
     "clean": "tsc --build --clean",
     "jasmine": "jasmine",
-    "test": "npm run build && npm run jasmine"
+    "test": "npm run build && npm run jasmine",
+    "start": "nodemon src/simple-server.ts",
+    "start:js": "node dist/simple-server"
   },
   "keywords": [],
   "author": "",
@@ -20,18 +22,22 @@
     "express": "^4.18.2",
     "jasmine": "^4.5.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "morgan": "^1.10.0",
     "supertest": "^6.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jasmine": "^4.3.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
+    "nodemon": "^2.0.20",
     "prettier": "2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
 }
